<resources>
    <string name="app_name" translatable="false">LoL Champions</string>
    <string name="enter_champion_name">Enter a champion name:</string>
    <string name="problem_refreshing_champs">There was a problem.\nTry to refresh tapping here.</string>
    <string name="champions">Champions</string>
    <string name="fav_champions">Fav. Champions</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="attack">Attack</string>
    <string name="health">Health</string>
    <string name="magic">Magic</string>
    <string name="difficulty">Difficulty</string>
    <string name="abilities">Abilities</string>
    <string name="Passive">Passive</string>
    <string name="tips">Tips</string>
    <string name="attributes">Attributes</string>
    <string name="allytips">Ally Tips</string>
    <string name="enemytips">Enemy Tips</string>
    <string name="invalid_data">Invalid data</string>
    <string name="more">more</string>
    <string name="health_regen_per_5">HP regen per 5</string>
    <string name="mana">Mana</string>
    <string name="mana_regen_per_5">Mana regen per 5</string>
    <string name="move_speed">Move Speed</string>
    <string name="armor">Armor</string>
    <string name="attack_damage">Attack Damage</string>
    <string name="attack_range">Attack Range</string>
    <string name="attack_speed">Attack Speed</string>
    <string name="critical">Critical</string>
    <string name="per_level">Per Level</string>
    <string name="cool_down">CD</string>
    <string name="range">Range</string>
    <string name="no_internet">No internet connection</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="close">Close</string>
    <string name="setting_wallpaper">Setting wallpaper</string>
    <string name="wallpaper_ready">Wallpaper ready</string>
    <string name="error_wallpaper">Error setting wallpaper</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="saving_champion">Saving champion</string>
    <string name="error_saving_champion">Error saving champion</string>
    <string name="champion_saved">Champion Saved</string>
    <string name="removing_champion">Removing champion</string>
    <string name="error_removing_champion">Error removing champion</string>
    <string name="champion_removed">Champion removed</string>
    <string name="setting">Settings</string>
    <string name="share">Share</string>
    <string name="gallery">Gallery</string>
    <string name="loading">Loading</string>
    <string name="champion">Champion Loading</string>
    <string name="regions">Regions</string>
    <string name="languages">Languages</string>
    <string name="saved">saved</string>
    <string name="tap_to_see_more">Tap to see more</string>
    <string name="nav_message">This app is not related with RIOT nor League of Legends.</string>
    <string name="champion_rotation">Champ. Rotation</string>
    <string name="champion_running">Wait a moment</string>
    <string name="checking_api_version">Checking API Version</string>
    <string name="remove_message">Do you want to remove this champion?</string>
</resources>
