<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/championsAction"
            android:tint="@color/button_grey"
            android:title="@string/champions" />

        <item
            android:id="@+id/favoriteChampionsAction"
            android:tint="@color/button_grey"
            android:title="@string/fav_champions" />

        <item
            android:id="@+id/rateThisAppAction"
            android:tint="@color/button_grey"
            android:title="@string/rate_this_app" />

        <item
            android:id="@+id/settingAction"
            android:tint="@color/button_grey"
            android:title="@string/setting" />
    </group>
</menu>