<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/title_margin_end">

            <TextView
                android:id="@+id/attributesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen8"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/attributes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <include
                android:id="@+id/attackBarView"
                layout="@layout/row_champion_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/champion_bar_height"
                android:layout_below="@id/attributesTextView"
                android:layout_marginBottom="@dimen/champion_name_padding" />

            <include
                android:id="@+id/defenseBarView"
                layout="@layout/row_champion_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/champion_bar_height"
                android:layout_marginBottom="@dimen/champion_name_padding" />

            <include
                android:id="@+id/magicBarView"
                layout="@layout/row_champion_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/champion_bar_height"
                android:layout_marginBottom="@dimen/champion_name_padding" />

            <include
                android:id="@+id/difficultyBarView"
                layout="@layout/row_champion_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/champion_bar_height"
                android:layout_marginBottom="@dimen/champion_name_padding" />

            <TextView
                android:id="@+id/abilitiesTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen8"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/abilities"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/abilitiesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/tipsTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen8"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/tips"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>